# xmltree

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: tests.yml
benches/: bin_formats.rs  xml_vs_bin.rs
examples/: example.xml  formatter.rs  parser.rs  serializer.rs  writer.rs
src/: arena.rs  document.rs  dtd.rs  error.rs  lib.rs  node.rs  strspan.rs  to_bin.rs  to_xml.rs
src/node/: cdata.rs  dtd.rs  name.rs  pi.rs  tag.rs  text.rs
tests/: good.rs  good.xml  good.xml.parsed
