[package]
name = "xmltree"
version = "0.1.0"
edition = "2024"

[dependencies]
xmlparser = "0.13.6"
thiserror = "2.0"
htmlentity = "1.3.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "xml_vs_bin"
harness = false

[[bench]]
name = "bin_formats"
harness = false