[package]
name = "xmltree"
version = "0.1.0"
edition = "2024"
description = "Zero-copy XML Parser and Writer"
license = "MIT"
repository = "https://github.com/rscarson/xmltree"
homepage = "https://github.com/rscarson/xmltree"
documentation = "https://docs.rs/xmltree"
readme = "README.md"
keywords = ["xml", "parser", "tree", "data-format"]
categories = ["parsing", "data-structures", "encoding"]
authors = ["@rscarson"]


[dependencies]
xmlparser = "0.13.6"    # Provides zero-copy XML tokenization
thiserror = "2.0"       # Provides more intuitive error handling
htmlentity = "1.3.2"    # Provides entity escaping for XML formatted output

[dev-dependencies]
criterion = { version = "0.6", features = ["html_reports"] }

[[bench]]
name = "xml_vs_bin"
harness = false

[[bench]]
name = "bin_formats"
harness = false